--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,18 +1,10 @@
-/*.event {
-  background-color: #333;
-  background-color: rgba(51, 51, 51, 0.5);
-  border-radius: 10px;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid white;
+blockquote {
+  border-color: #666;
 }
 
-
-.face-small {
-  border: 2px solid white;
-  width: 72px;
-  height: 72px;
-}*/
+blockquote footer{
+  color: #aaa;
+}
 
 .panel-default {
   border-color: #aaa;
