--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="row">
            <div class="col-sm-6">
-             <p>Created by Corbin and Tanya &#9825; <span class="glyphicon glyphicon-heart-empty"></span></p>
+             <p>Created by Corbin and Tanya &#9825;</p>
            </div>
            <div class="col-sm-6">
              <p>Questions? <a href="mailto:murrowwedding@gmail.com?subject=Feedback">Email us.</a></p>
