--- a/_includes/directions-modal.html
+++ b/_includes/directions-modal.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h2 class="modal-title" id="myModalLabel">Directions</h2>
+        <h2 class="modal-title text-center" id="myModalLabel">Directions</h2>
       </div>
       <div class="modal-body" id="directionsPanel">
 
