--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="{{baseurl}}/stylesheets/site.css" />
-    <link rel="stylesheet" href="{{baseurl}}/stylesheets/theme.css" /> -->
+    <link rel="stylesheet" href="{{baseurl}}/stylesheets/theme.css" />
+    <link rel="stylesheet" href="{{baseurl}}/stylesheets/site.css" />
     <link rel="stylesheet" href="{{baseurl}}/stylesheets/stylesheet.css" />
-    <!-- <link rel="stylesheet" href="{{baseurl}}/stylesheets/timeline.css" /> -->
 
     <link href='http://fonts.googleapis.com/css?family=Quando|Courgette' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway|Berkshire+Swash' rel='stylesheet' type='text/css'>
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="{{baseurl}}/javascripts/bootstrap.min.js"></script>
