--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,54 +1,9 @@
 a.back-to-top {
 	display: none;
-	/*width: 60px;
-	height: 60px;*/
-  /*width: auto;
-  height: auto;*/
-	/*text-indent: -9999px;*/
 	position: fixed;
 	z-index: 999;
 	right: 20px;
 	bottom: 20px;
-	/*background: #27AE61 url("up-arrow.png") no-repeat center 43%;*/
-	/*-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;*/
-}
-
-/*tab {
-  padding-left: 4em;
-}*/
-
-blockquote {
-  border-color: #666;
-}
-
-blockquote footer{
-  color: #aaa;
-}
-
-.panel-default {
-  border-color: #aaa;
-  color: #fff;
-  background-color: transparent;
-}
-
-.panel-default > .panel-heading {
-  background-color: #333;
-  background-color: rgba(51,51,51,0.75);
-  color: #fff;
-  border-bottom-color: inherit;
-}
-
-.panel-default > .panel-heading > .panel-title{
-  font-weight: normal;
-  font-size: 150%;
-}
-
-.panel-default > .panel-body {
-  /*background-color: #333;*/
-  background-color: #333;
-  background-color: rgba(51,51,51,0.5);
 }
 
 .face-corbin,
@@ -56,11 +11,6 @@ blockquote footer{
   border: 2px solid white;
   width: 144px;
   height: 144px;
-}
-
-.modal-title {
-  color: #333;
-  text-align: center;
 }
 
 /* Other */
@@ -75,6 +25,7 @@ blockquote footer{
   }
 }
 
+/* Map */
 .show-map {
   cursor: pointer;
 }
@@ -88,21 +39,39 @@ img.adp-marker {
   margin: 5px;
 }
 
-/* ---- */
-
-.form-horizontal .form-group {
-  margin-left: 0;
-  margin-right: 0;
-}
-
 #map {
   width: 100%;
   height: 300px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
+/* ---- */
 
-.navbar {transition-duration: 0.25s;}
+.panel-default.panel-map,
+.panel-default.panel-map > .panel-heading {
+  background-color: transparent;
+  border-color: transparent;
+  box-shadow: none;
+}
+
+.panel-default.panel-map {
+  color: #fff;
+  margin: 0;
+}
+
+.panel-default.panel-map > .panel-heading {
+  color: #ccc;
+}
+
+.panel-default.panel-map > .panel-heading:hover {
+  color: #fff;
+  background-image: linear-gradient(to right, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.85), rgba(51, 51, 51, 0));
+}
+
+.panel-map .panel-title {
+  font-size: inherit;
+  font-weight: bold;
+}
 
 /* RSVP page styles */
 
@@ -139,10 +108,6 @@ img.adp-marker {
 
 /* ----- */
 
-.test {
-  text-align: center;
-}
-
 .registry-img {
   margin-left: auto;
   margin-right: auto;
@@ -155,13 +120,6 @@ img.adp-marker {
   border-bottom-color: rgba(255,255,255,.25);
 }
 
-/* Cycling background image ---------------------- */
-body {
-  /*background-image: url('../images/photo1.jpg');*/
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-}
 
 /* Header font centering */
 
@@ -169,29 +127,6 @@ body {
   text-align: center;
   font-size: 500%;
 }
-
-/* cover page spacer */
-.cover-spacer {
-  height: 50%;
-}
-
-/*@media (min-width: 768px) {
-  .cover-spacer {
-    height: 250px;
-  }
-}
-
-@media (min-width: 992px) {
-  .cover-spacer {
-    height: 350px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .cover-spacer {
-    height: 350px;
-  }
-}*/
 
 /* other page spacer */
 @media (min-width: 768px) {
@@ -216,84 +151,9 @@ body {
 
 /* Custom default button */
 
-.btn-default {
-  color: #ccc;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #333;
-  border: 1.5px solid #777;
-}
 
-.btn-default:hover,
-.btn-default:focus,
-.btn-default:active,
-.btn-default:hover:focus,
-.btn-default:active:focus,
-.btn-default:active:hover,
-.btn-default.active{
-  color: #fff;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #444;
-  border: 1.5px solid #fff;
-}
 
-.btn-default:disabled,
-.btn-default.disabled,
- .btn-default[disabled],
- .btn-default[disabled]:hover{
-  color: #ccc;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #444;
-  border: 1.5px solid #777;
-}
 
-.btn-primary {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #666;
-}
-
-.btn-primary:hover,
-.btn-primary:focus {
-  color: #000;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #ddd;
-  border: 1px solid #333;
-}
-
-.form-control {
-  background-color: #333;
-  color: #ccc;
-}
-
-.form-control:hover {
-  background-color: #444;
-  color: #fff;
-  border-color: #fff;
-}
-
-.input-group-addon,
-.form-control {
-  border-color: #777;
-}
-
-.input-group-addon {
-  background-color: #555;
-  color: #bbb;
-  width: 70px;
-}
-
-.input-group {
-  width: 100%; /* Fixes width: 70px from input-group-addon */
-}
-
-.input-symbol {
-  color: #999;
-}
-
-.form-control:hover .input-symbol {
-  color: #fff;
-}
 
 div {
   text-shadow: none;
@@ -302,6 +162,48 @@ div {
 /* ----end RSVP page styles--------- */
 
 
+.site-wrapper {
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
+
+
+
+/*
+ * Panels
+ */
+
+
+
+/*
+ * Footer
+ */
+
+.footer {
+  color: #999; /* IE8 proofing */
+  color: rgba(255,255,255,.5); /* should this be commented?*/
+  background-color: transparent;
+  /*background-color: rgba(0,0,0,.5);*/
+}
+
+/* Links */
+a {
+  color: #ccc;
+}
+
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom hr
+Gradient: transparent - color - transparent */
+.hr-custom {
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
+}
 
 /* Fonts */
 
@@ -335,160 +237,14 @@ body {
   background-color: #333;
 }
 
-.site-wrapper {
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+/* Cycling background image ---------------------- */
+body {
+  /*background-image: url('../images/photo1.jpg');*/
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
 }
 
-.navbar-default {
-  background-color: #333;
-  border: 0px;
-  font-size: 150%;
-}
-
-.navbar-transparent,
-.navbar-opaque {
-  background-color: #333;
-}
-
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active:hover > a,
-.navbar-default .navbar-nav > .active:focus > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  background-color: #333;
-  color: #fff;
-  border-bottom: 1px solid #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-  }
-
-  .navbar-transparent {
-    background-color: transparent;
-  }
-
-  .navbar-opaque {
-    background-color: #333;
-  }
-
-  .navbar-default .navbar-nav > .active > a,
-  .navbar-default .navbar-nav > .active:hover > a,
-  .navbar-default .navbar-nav > .active:focus > a,
-  .navbar-default .navbar-nav > .active > a:hover,
-  .navbar-default .navbar-nav > .active > a:focus {
-    background-color: transparent;
-    color: #fff;
-    border-bottom: 1px solid #fff;
-    border-bottom-color: #fff;
-  }
-}
-
-.navbar-default .navbar-nav > li > a {
-  color: #fff;  /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  background-color: #333;
-}
-
-@media (min-width: 768px) {
-  .navbar-default .navbar-nav > li > a {
-    color: #fff;  /* IE8 proofing */
-    color: rgba(255,255,255,.75);
-    background-color: transparent;
-    }
-  }
-
-.navbar-default .navbar-nav > li:hover > a
-.navbar-default .navbar-nav > li:focus > a,
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #fff;  /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 1px solid #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-
-.navbar-default .navbar-brand {
-  color: #fff;
-  color: rgba(255,255,255,.75);
-  font-size: 150%;
-}
-
-.navbar-default .navbar-brand:hover {
-  color: #fff;
-}
-
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:active,
-.navbar-default .navbar-toggle:focus {
-  color: #fff;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #444;
-  border: 1.5px solid #fff;
-}
-
-
-/*
- * Panels
- */
-
-.panel-default.panel-map,
-.panel-default.panel-map > .panel-heading {
-  background-color: transparent;
-  border-color: transparent;
-  box-shadow: none;
-}
-
-.panel-default.panel-map {
-  color: #fff;
-  margin: 0;
-}
-
-.panel-default.panel-map > .panel-heading {
-  color: #ccc;
-}
-
-.panel-default.panel-map > .panel-heading:hover {
-  color: #fff;
-  background-image: linear-gradient(to right, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.85), rgba(51, 51, 51, 0));
-}
-
-.panel-map .panel-title {
-  font-size: inherit;
-  font-weight: bold;
-}
-
-/*
- * Footer
- */
-
-.footer {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5); /* should this be commented?*/
-  background-color: transparent;
-  /*background-color: rgba(0,0,0,.5);*/
-}
-
-/* Links */
-a {
-  color: #ccc;
-}
-
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom hr
-Gradient: transparent - color - transparent */
-.hr-custom {
-  border: 0;
-  height: 2px;
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0));
-}
 
 /* Sticky footer styles
 -------------------------------------------------- */
